# automata

./: .gitignore  AssignmentParser.cpp  AssignmentParser.h  CMakeLists.txt  DelimiterParser.cpp  DelimiterParser.h  LexicalAnalysisTab.cpp  LexicalAnalysisTab.h  OperationParser.cpp  OperationParser.h  ProjectOverviewTab.cpp  SyntaxAnalysisTab.cpp  SyntaxAnalysisTab.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  samplecode.txt
automata-main/: AssignmentParser.cpp  AssignmentParser.h  CMakeCache.txt  CMakeLists.txt  DelimiterParser.cpp  DelimiterParser.h  DrawHelper.cpp  LexicalAnalysis.cpp  LexicalAnalysis.h  NFASimulatorTab.cpp  OperationParser.cpp  OperationParser.h  SyntaxAnalysisTab.cpp  mainwindow.cpp  mainwindow.h  samplecode.txt
automata-main__10-12-2025/: AssignmentParser.cpp  CMakeLists.txt  DiagramBuilder.cpp  DrawHelper.h  LexicalAnalysisTab.cpp  SyntaxAnalysisTab.cpp  SyntaxAnalysisTab.h
automata_main/: AssignmentParser.h  CMakeLists.txt  DelimiterParser.cpp  DiagramBuilder.h  LexicalAnalysis.cpp  NFASimulatorTab.cpp  NFASimulatorTab.h  OperationParser.h  ProjectOverviewTab.h  SyntaxAnalysisTab.cpp  SyntaxAnalysisTab.h  ThompsonsBuilderTab.cpp  ThompsonsBuilderTab.h  mainwindow.cpp  mainwindow.h  samplecode.txt
